# Rag-Multi-doc

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: main.py  schemas.py
app/api/routes/: admin.py  health.py  query.py
app/core/: __init__.py  config.py  logging.py  mlflow_config.py
app/pipeline/: __init__.py  document_loader.py  hybrid_search.py  rag_pipeline.py
app/services/: __init__.py  embedding.py  llm.py  reranker.py  vector_db.py
docs/: sample.md
evaluation/: ragas_eval.py  test_question.json
scripts/: init_db.py  run_server.py
tests/: test_api.py  test_config.py  test_document_loader.py
